eruption-gui-gtk3/resources/styles/app.css
/*  SPDX-License-Identifier: GPL-3.0-or-later  */

/*
    This file is part of Eruption.

    Eruption is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Eruption is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Eruption.  If not, see <http://www.gnu.org/licenses/>.

    Copyright (c) 2019-2023, The Eruption Development Team
*/

.client {
  margin: 18px;
}

.heading {
  font-size: xx-large;
  font-weight: bold;
  margin-left: 8px;
}

.notification {
  font-style: italic;
  margin-bottom: 8px;
}

.small-font {
  font-size: small;
}

box .slot_indicator {
  border-radius: 8px;
  border: 4px dotted gray;
}

box .slot_indicator.active {
  background: linear-gradient(
    180deg,
    rgba(105, 105, 105, 0.7),
    rgba(105, 105, 105, 0.15)
  );
  border: 5px solid rgba(128, 128, 128, 0.5);
}

.slot_indicator combobox {
  font-size: small;
}

.slot_entry {
  font-size: large;
  font-weight: bold;
}

